# 23INF2004Team31

./: README.md
I2C_Slave_Devices/24c256/: 24c256.c  CMakeLists.txt
I2C_Slave_Devices/BMP280_Slave/: BMP280_Slave.c  CMakeLists.txt
I2C_Slave_Devices/Generic/: CMakeLists.txt  Generic.c  config.h  config_BMP280.h  config_Lis3dh.h  config_ht16k33.h  config_lcd_1602.h
I2C_Slave_Devices/Lis3dh_Slave/: CMakeLists.txt  Lis3dh_Slave.c
I2C_Slave_Devices/ht16k33_Slave/: CMakeLists.txt  ht16k33_Slave.c
I2C_Slave_Devices/lcd_1602_Slave/: CMakeLists.txt  lcd_1602_Slave.c
SPI_Master_Slave/: CMakeLists.txt  CMakeLists.txt.txt  bme280_Slave.c  proj_master.c  proj_slave.c  spi_master.c
driver/: CMakeLists.txt  README.md  spi_driver.c
driver/flashid/: CMakeLists.txt
driver/sdcard/: CMakeLists.txt
driver/spi_driver/: CMakeLists.txt  README.md  spi_driver.c
flashID/: CMakeLists.txt  project.c
flashid/: flashid.c
flashmicro/: CMakeLists.txt  flashmicro.c
main/: BMP280.h  BMP280_Slave.c  CMakeLists.txt  Generic.c  Generic.h  Lis3dh.h  Lis3dh_Slave.c  bme280_Slave.c  config.h  config_BMP280.h  config_Lis3dh.h  config_ht16k33.h  config_lcd_1602.h  flashmicro.c  flashmicro.h  ht16k33.h  ht16k33_Slave.c  integrated.c  lcd1602.h  lcd_1602_Slave.c  spi_master.c  spimaster.h
sdcard/: SDCard.c
sdcard/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: sd_card.c
